--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Megala's Website</title>
+    <title>Arth's Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist","Problem Solver", 
+								     data-rotate='[ "Data Scientist","Problem Solver",
 								     "STEMinist",  "Thespian", "Vlogger" ]'></span>
 								</h2>
 							</div>
@@ -360,6 +360,7 @@
 			  </div>
     	</div>
     </section>
+
 
  
 <section class="ftco-section ftco-no-pb goto-here" id="projects-section">
