change name and I'm a ----

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
-		  				<h1>Megala Kannan</h1>
+		  				<h1>Arth Talati</h1>
 			  				<h2>I'm a 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist","Problem Solver",
-								     "STEMinist",  "Thespian", "Vlogger" ]'></span>
+								     data-rotate='[ "Data Scientist",
+								     "Problem Solver" ]'></span>
 								</h2>
 							</div>
             </div>
