--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span>M</span>egala</a>
+	      <a class="navbar-brand" href="index.html"><span>A</span>rth</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -106,10 +106,10 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="20">0</span>
+	                <span class="number" data-number="13">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="/Users/megalakannan/Documents/Megala/resume_fulltime_2.docx" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="/Users/Arth/Desktop/GitIO/arthtalati.github.io/resume_arth.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
