change about me and contact details test resume

--- a/index.html
+++ b/index.html
@@ -87,19 +87,17 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a Data Scientist at PepsiCo with a graduate degree from Columbia University, Data Science Institute. I have obtained my undergraduate in Computer Science from India. As a part of my graduate program I have acquired various skills to become a full fledged Data Scientist. I have studied courses like statistical modeling, machine learning and applied deep learning. </p>
+		            <p>I am a Data Scientist at University of Pennsylvania</p>
 
-					<p>My main interests lies in applied machine learning and deep learning techniques to solve real world problems. I enjoy working in natural language processing domain as well. My course projects have enabled me to gain the required skills to be a well rounded data scientist. I worked at Johnson & Jonhson as a data science intern where I sparked an interest in the 
-					healthcare domain. The problems being worked on in healthcare are very challenging and gave me a good exposure to real world data science applications. </p>
+					<p> Line 2 </p>
 
-					<p>Apart from aspiring to be a top notch data scientist I enjoy theatre, music and art and hope to someday walk the stage again and get involved in performing arts.</p>
+					<p>Line 3 </p>
 		     <!--       <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Megala Kannan</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>March 29, 1997</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>New York, NY</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>msk2245@columbia.edu</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-908-693-3290</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Arth Talati</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>June 30, 1997</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Philadelphia, PA</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>atalati@seas.upenn.edu</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+1-267-206-8721</span></li>
 		            </ul> -->
 		          </div>
 		        </div>
@@ -107,9 +105,9 @@
               <div class="text">
               	<p class="mb-4">
 	                <span class="number" data-number="13">0</span>
-	                <span>Project complete</span>
+	                <span>Projects complete</span>
                 </p>
-                <p><a href="/Users/Arth/Desktop/GitIO/arthtalati.github.io/resume_arth.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="resume_arth.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
