--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2018-2020</span>
+		    					<span class="date">2019-2021</span>
 		    					<h2>Master of Science in Data Science</h2>
-		    					<span class="position">Columbia University</span>
-		    					<p>Courses: Machine Learning for Data Science, Algorithms in Data Science, Probability and Statistics, Exploratory Data Analysis & Visualizations, Statistical Inference and Modelling. Applied ML, Personalization theory & application, Applied Deep Learning, Computer Systems for Big Data
-</p>
+		    					<span class="position">University of Pennsylvania</span>
+		    					<p>Courses: Big Data Analytics, Statistics for Data Science, Machine Learning, Internet of Things and Edge Computing, Data
+									Science for Public policy, Database, Computational Linguistics, Computer Architecture</p>
 		    				</div>
 		    			</div>
 		    			<div class="resume-wrap d-flex ftco-animate">
@@ -148,23 +148,12 @@
 					    		<span class="flaticon-ideas"></span>	
 		    				</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2018</span>
-		    					<h2>Bachelor of Science in Computer Science</h2>
-		    					<span class="position">College of Engineering, Guindy</span>
-		    					<p>Courses: Algorithms, Data Structures, Operating Systems, Computer Architecture, Database management systems, Artificial Intelligence, Compiler Design, Theory of Computing, Software Engineering</p>
+		    					<span class="date">2015-2019</span>
+		    					<h2>Bachelor of Technology in Electronics and Communication Engineering</h2>
+		    					<span class="position">National Institute of Technology, Surat</span>
+		    					<p>Minor: Data Science</p>
 	    					</div>
 	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-					    	<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-	    					<div class="text pl-3">
-		    					<span class="date">Jun-Jul 2017</span>
-		    					<h2>Foreign Technical Training Program</h2>
-		    					<span class="position">National Chin-Yi University of Technology</span>
-		    					<p>Summer exchange program on Computer Science and Electronics</p>
-	    					</div>
-	    				  </div>
 	    
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
