Experience section complete

--- a/index.html
+++ b/index.html
@@ -162,10 +162,12 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Apr '20 - Present</span>
-		    					<h2>Data Scientist</h2>
-		    					<span class="position">PepsiCo</span>
-		    					<p>I am a Data Scientist in the Data Science and Analytics team at PepsiCo eCommerce. I primarily work on using data science techniques to optimize sales and ROI for products sold by PepsiCo</p>
+		    					<span class="date">Aug - Dec 2020</span>
+		    					<h2>Teaching Assistant</h2>
+		    					<span class="position">University of Pennsylvania</span>
+		    					<p>TA for CIS 545 Big Data Analytics course. Helped in designing home works and hosting big data on S3 instances on AWS. Developed
+									a guide to spin up EMR cluster using AWS CLI. Mentored 8 student groups for their final projects.</p>
+								<p>TA for GAFL 531 Statistics for Public Policy class. Helped students during Office hours and assisted in checking home works.</p>
 		    				</div>
 	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
@@ -173,11 +175,14 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Jun-Jul 2019</span>
+		    					<span class="date">May - Aug 2020</span>
 		    					<h2>Data Science Intern</h2>
-		    					<span class="position">Johnson & Johnson</span>
-		    					<p>Analyzed voice of customer data regarding drug products using Natural Language Processing. Developed medical ontologies using Linguamatics and word embeddings (Fasttext) techniques to perform semantic querying. 
-		    					   Built a text analyzer for the voice of customer data using unsupervised clustering models in python.</p>
+		    					<span class="position">C-Space and Wharton Consumer Analytics</span>
+		    					<p>Overhauled Customer Maturity Model for customer survey data of 300 publicly traded companies. Performed K-means clustering
+									to segment companies into separate cohorts w.r.t their public opinion. Performed sentiment analysis on customer feedback for
+									companies.</p>
+								<p>Examined financial trends by analyzing different financial indicators (like Cap-Ex, Long-Term Debt, etc) to validate clustering model
+									and provided detailed analyses for different industries (like Retail, Healthcare, etc).</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -185,10 +190,13 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">May-Jun 2017</span>
-		    					<h2>Data Science Intern</h2>
-		    					<span class="position">PurpleSlate</span>
-		    					<p> Modeled the users’ real time data using clustering techniques. Analyzed price movements in the financial and customer markets.</p>
+		    					<span class="date">Jan - May 2020</span>
+		    					<h2>Research Analyst</h2>
+		    					<span class="position">Penn Data Science Group</span>
+		    					<p> Assisted the Procurement Department at university to identify high-risk transactions as part of Purchasing Services High Risk
+									Procurement Project.</p>
+								<p> Designed custom anomaly detection algorithm from Local Outlier Factor and Isolation Forests algorithm for dataset of 1.8 million
+									Oracle Financials invoices.</p>
 		    				</div>
 	    				</div>
 	    				
