Contact Details update

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>New York, NY 10027</p>
+		            <p>Philadelphia, PA</p>
 		          </div>
 	          </div>
           </div>
@@ -581,7 +581,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+1 908-693-3290</a></p>
+		            <p><a href="tel://+12672068721">+1 267-206-8721</a></p>
 	            </div>
 	          </div>
           </div>
@@ -592,7 +592,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">msk2245@columbia.edu</a></p>
+		            <p><a href="mailto:atalati@seas.upenn.edu">atalati[at]seas.upenn.edu</a></p>
 		          </div>
 	          </div>
           </div>
@@ -603,8 +603,9 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Links</h3>
-		            <p><a href="www.linkedin.com/in/megalakannan">LinkedIn</a></p>
-		            <p><a href="https://github.com/thisismeg">Github</a></p>
+		            <p><a href="https://linkedin.com/in/arthtalati">LinkedIn</a></p>
+		            <p><a href="https://github.com/arthtalati">Github</a></p>
+					<p><a href="https://twitter.com/arth_talati">Twitter</a></p>
 	            </div>
 	          </div>
           </div>
