new image and first draft

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								     class="txt-rotate"
 								     data-period="2000"
 								     data-rotate='[ "Data Scientist",
-								     "Problem Solver" ]'></span>
+								     "Data Engineer", "Self-Starter" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -87,18 +87,20 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a Data Scientist at University of Pennsylvania</p>
+		            <p>I am a grad student, studying Data Science at the University of Pennsylvania.
+						I have obtained my undergraduate degree in Electronics and Communication Engg for India.
+						I am looking for full-time opportunities in Data Science/ Data Engineering domain. </p>
 
-					<p> Line 2 </p>
+					<p> I am a data junkie who is skilled in solving analytical problems using quantitative approaches and developing Machine Learning Models.
+						I am a self-starter, who likes to explore and learn newer methodologies of solving problems and bringing ideas to fruition.
+						My main interests lies in applied machine learning and managing big data to solve real world problems.
+						I enjoy working in natural language processing domain as well.
+						My course projects have enabled me to gain the required skills to be a well rounded data scientist.
+						I worked at C-Space as a data science intern where I sparked an interest in the consumer behavioural analytics domain.
+						The problems being worked on in this area are very challenging and gave me a good exposure to real world data science applications.
+					</p>
 
-					<p>Line 3 </p>
-		     <!--       <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Arth Talati</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>June 30, 1997</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Philadelphia, PA</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>atalati@seas.upenn.edu</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-267-206-8721</span></li>
-		            </ul> -->
+					<p>Apart from aspiring to be a top notch data scientist I enjoy chess, football and music and hope to someday learn how to play a saxophone.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -363,74 +365,74 @@
     </section>
 
 
-    <section class="ftco-section" id="interests-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Interests</h1>
-            <h2 class="mb-4">My Interests</h2>
-            <p>Things that interest me that are NOT in the data science space!</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <div class="block-20" style="background-image: url('images/interest-1.jpg');">
-              </div>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading">Extra Curricular</h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<!--<span class="mr-2">Sept. 12, 2019</span> 
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
-	                </p>
-                </div>
-                <p>During college I was a part of a theatre club called Theatron where I was involved in several productions for MYTF and CTI by Crea-Shakthi. I love acting and being a part of 
-                the production team for dramas. I organized theatre events at culturals like street play and mono acting. I was the head of finance in my senior year at college. Outside
-                of college I also worked for EVAM and I was a part of the organising team for The Hindu Theatre Festival in 2016 and 2017. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <div class="block-20" style="background-image: url('images/interest-2.jpeg');">
-              </div>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading">Volunteer</h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	             <!--   <p class="mb-0">
-	                	<span class="mr-2">Sept. 12, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-	            -->
-                </div>
-                <p>In my college days I was an active part of the Youth Red Cross foundation and Rotaract Committee that organized events for college students to help for the well being of the society.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <div class="block-20" style="background-image: url('images/interest-3.jpg');">
-              </div>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading">Hobbies</h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	            <!--    <p class="mb-0">
-	                	<span class="mr-2">Sept. 12, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p> -->
-                </div>
-                <p>I am a trinity level 6 pianist and I enjoy playing some of my favorite songs in my free time. I also like to work on some DIY arts & crafts projects for room decor or to
-                gift to my friends as presents. When I am trying to have a lazy day I love to binge watch youtube videos of some of the lifestyle vloggers I follow and occasionally I like to shoot some vlogs myself</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+<!--    <section class="ftco-section" id="interests-section">-->
+<!--      <div class="container">-->
+<!--        <div class="row justify-content-center mb-5 pb-5">-->
+<!--          <div class="col-md-7 heading-section text-center ftco-animate">-->
+<!--            <h1 class="big big-2">Interests</h1>-->
+<!--            <h2 class="mb-4">My Interests</h2>-->
+<!--            <p>Things that interest me that are NOT in the data science space!</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row d-flex">-->
+<!--          <div class="col-md-4 d-flex ftco-animate">-->
+<!--          	<div class="blog-entry justify-content-end">-->
+<!--              <div class="block-20" style="background-image: url('images/interest-1.jpg');">-->
+<!--              </div>-->
+<!--              <div class="text mt-3 float-right d-block">-->
+<!--                <h3 class="heading">Extra Curricular</h3>-->
+<!--                <div class="d-flex align-items-center mb-3 meta">-->
+<!--	                <p class="mb-0">-->
+<!--	                	&lt;!&ndash;<span class="mr-2">Sept. 12, 2019</span> -->
+<!--	                	<a href="#" class="mr-2">Admin</a>-->
+<!--	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> &ndash;&gt;-->
+<!--	                </p>-->
+<!--                </div>-->
+<!--                <p>During college I was a part of a theatre club called Theatron where I was involved in several productions for MYTF and CTI by Crea-Shakthi. I love acting and being a part of -->
+<!--                the production team for dramas. I organized theatre events at culturals like street play and mono acting. I was the head of finance in my senior year at college. Outside-->
+<!--                of college I also worked for EVAM and I was a part of the organising team for The Hindu Theatre Festival in 2016 and 2017. </p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-md-4 d-flex ftco-animate">-->
+<!--          	<div class="blog-entry justify-content-end">-->
+<!--              <div class="block-20" style="background-image: url('images/interest-2.jpeg');">-->
+<!--              </div>-->
+<!--              <div class="text mt-3 float-right d-block">-->
+<!--                <h3 class="heading">Volunteer</h3>-->
+<!--                <div class="d-flex align-items-center mb-3 meta">-->
+<!--	             &lt;!&ndash;   <p class="mb-0">-->
+<!--	                	<span class="mr-2">Sept. 12, 2019</span>-->
+<!--	                	<a href="#" class="mr-2">Admin</a>-->
+<!--	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>-->
+<!--	                </p>-->
+<!--	            &ndash;&gt;-->
+<!--                </div>-->
+<!--                <p>In my college days I was an active part of the Youth Red Cross foundation and Rotaract Committee that organized events for college students to help for the well being of the society.</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-md-4 d-flex ftco-animate">-->
+<!--          	<div class="blog-entry">-->
+<!--              <div class="block-20" style="background-image: url('images/interest-3.jpg');">-->
+<!--              </div>-->
+<!--              <div class="text mt-3 float-right d-block">-->
+<!--                <h3 class="heading">Hobbies</h3>-->
+<!--                <div class="d-flex align-items-center mb-3 meta">-->
+<!--	            &lt;!&ndash;    <p class="mb-0">-->
+<!--	                	<span class="mr-2">Sept. 12, 2019</span>-->
+<!--	                	<a href="#" class="mr-2">Admin</a>-->
+<!--	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>-->
+<!--	                </p> &ndash;&gt;-->
+<!--                </div>-->
+<!--                <p>I am a trinity level 6 pianist and I enjoy playing some of my favorite songs in my free time. I also like to work on some DIY arts & crafts projects for room decor or to-->
+<!--                gift to my friends as presents. When I am trying to have a lazy day I love to binge watch youtube videos of some of the lifestyle vloggers I follow and occasionally I like to shoot some vlogs myself</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
