update resume and small changes in index

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						My main interests lies in applied machine learning and managing big data to solve real world problems.
 						I enjoy working in natural language processing domain as well.
 						My course projects have enabled me to gain the required skills to be a well rounded data scientist.
-						I worked at C-Space as a data science intern where I sparked an interest in the consumer behavioural analytics domain.
-						The problems being worked on in this area are very challenging and gave me a good exposure to real world data science applications.
+						I have worked at C-Space as a data science intern where I sparked an interest in the consumer behavioural analytics domain.
+						The problems being worked upon in this area are very challenging and gave me a good exposure to real world data science applications.
 					</p>
 
 					<p>Apart from aspiring to be a top notch data scientist I enjoy chess, football and music and hope to someday learn how to play a saxophone.</p>
