add cook assist proj

--- a/index.html
+++ b/index.html
@@ -303,6 +303,27 @@
 								<iframe src="https://player.vimeo.com/video/415780627" width="320" height="240" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 							</div>
 	    				</div>
+
+                        <div class="resume-wrap d-flex ftco-animate">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span class="flaticon-ideas"></span>
+                            </div>
+                            <div class="text pl-3">
+                                <span class="date"> May - Jun '20</span>
+                                <h2>Cook Assist</h2>
+                                <span class="position">Applied Machine Learning, UPenn</span>
+                                <p> 
+                                    Scraped BBC-GoodFoods website for 13000+food recipes using Chromium browser and BeautifulSoup package. 
+                                </p>
+                                <p>
+                                    Developed a R Shiny app with Neo4j DB to query the graph database to assist a cook in exploring new recipes and optimizing user time and effort spent while cooking.
+                                </p>
+                                <br>
+                                <a href= "https://https://github.com/arthtalati/Neo4j-BBC-GoodFood-App"> Github Repo |
+                                </a>
+                            </div>
+                        </div>
+
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
