resume .pdf to .doc

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	                <span class="number" data-number="13">0</span>
 	                <span>Projects complete</span>
                 </p>
-                <p><a href="resume_arth.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="resume_arth.doc" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
