updated with comma

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist", "Software Engineer"
+								     data-rotate='[ "Data Scientist", "Software Engineer",
 								     "Data Engineer", "Self-Starter" ]'></span>
 								</h2>
 							</div>
