Merck Industry Update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist", "Software Engineer",
+								     data-rotate='[ "Data Scientist",
 								     "Data Engineer", "Self-Starter" ]'></span>
 								</h2>
 							</div>
@@ -163,14 +163,26 @@
 	    
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+					  	<div class="resume-wrap d-flex ftco-animate">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span class="flaticon-ideas"></span>
+                            </div>
+                            <div class="text pl-3">
+                                <span class="date">July 2021 - Present</span>
+                                <h2>Sr. Specialist, Quantitative Sciences</h2>
+                                <span class="position">Merck</span>
+                                <p>Human Health, Insights, Analytics and Data - Vaccines</p>
+                            </div>
+                        </div>
+
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">Jan - Present</span>
+                                <span class="date">Jan - May 2021</span>
                                 <h2>Technical Consultant</h2>
-                                <span class="position">FOX Entertainment</span>
+                                <span class="position">FOX Entertainment & Wharton Consumer Analytics</span>
                                 <p>Conducted in-depth evaluation of marketing campaign data to help derive insights to improve audience reach, increase ROI of future promo campaigns and suggested recommendations for future initiatives</p>
                                 <p>Developed and refined customer segmentation models to analyse effects of social media campaigns supporting retention and long term promotional campaign profitability.</p>
                             </div>
