--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/grad_photo.jpeg);">
 	    				</div>
     				</div>
     			</div>
@@ -232,19 +232,6 @@
                                 <p>Presented model analysis to both technical and non-technical (Procurement Department) teams through high-level executive summaries.</p>
 		    				</div>
 	    				</div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">Aug 2018 - May 2019</span>
-                                <h2>Machine Learning Researcher</h2>
-                                <span class="position">Electronics design and Machine Learning Lab</span>
-                                <p> Designed an ASIC (Application Specific IC) prototype to be embedded on handheld devices to detect heart diseases by ECG machine learning algorithm (SVM and Naive Bayes).</p>
-                                <p> Modelled using extracted features to give disease predictions with 93% accuracy of a person having Premature Ventricular Contraction.</p>
-                            </div>
-                        </div>
 	    				
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
