--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								     class="txt-rotate"
 								     data-period="2000"
 								     data-rotate='[ "Data Scientist",
-								     "Data Engineer", "Self-Starter" ]'></span>
+								     "Bibliophile", "Self-Starter" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -90,7 +90,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/grad_photo.jpeg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/grad_photo_2.jpg);">
 	    				</div>
     				</div>
     			</div>
