email text update

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:atalati@alumni.upenn.edu">atalati[at]seas.upenn.edu</a></p>
+		            <p><a href="mailto:atalati@alumni.upenn.edu">atalati[at]alumni.upenn.edu</a></p>
 		          </div>
 	          </div>
           </div>
