--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                                 <span class="date">July 2021 - Present</span>
                                 <h2>Sr. Specialist, Quantitative Sciences</h2>
                                 <span class="position">Merck</span>
-                                <p>Human Health, Insights, Analytics and Data - Vaccines</p>
+                                <p>Team - Human Health, Vaccines</p>
+								<p>Developing Patients Insights Engine for Non-Small Cell Lung Cancer, worked before on quantifying the impact of HPV Vaccine Hesitancy in France.</p>
                             </div>
                         </div>
 
