--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 						<div class="resume-wrap d-flex ftco-animate">
 					    	<div class="text pl-3">
 		    					<h2>Tools & Languages</h2>
-		    					<span class="position"> SQL, Python, Java, R, PySpark, Tableau </span>
-		    					<p>PostgreSQL, MySQL, MATLAB, Neo4j, Spark, Pandas, R Shiny, AWS, Git, regex, XPath, Nltk, Scikit-learn</p>
+		    					<span class="position"> SQL, Python, Java, PySpark</span>
+		    					<p>PostgreSQL, MySQL, MATLAB, Neo4j, Spark, Pandas, R Shiny, AWS, Git</p>
 		    				</div>
 		    			</div>
 					  </div>
