title change merck

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">July 2021 - Present</span>
-                                <h2>Sr. Specialist, Data Sciences</h2>
+                                <h2>Data Scientist, Sr. Specialist</h2>
                                 <span class="position">Merck</span>
                                 <p>Team - Human Health, Vaccines</p>
 								<p>Developing Patients Insights Engine for Non-Small Cell Lung Cancer, worked before on quantifying the impact of HPV Vaccine Hesitancy in France.</p>
