--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     	<div class="container">
     		<div class="row d-flex no-gutters">
 				<h1 class="big">About Me</h1>
-                    <p>I am a grad student, studying Data Science at the University of Pennsylvania. I have obtained my undergraduate degree in Electronics and Communication Engg from India. I am looking for full-time opportunities in the Data Science/ Data Engineering domain. </p>
+                    <p>I am a grad student, studying Data Science at the University of Pennsylvania. </p>
 
                     <p> I am a data junkie who is skilled in solving analytical problems using quantitative approaches and developing Machine Learning Models. I am a self-starter, who likes to explore and learn newer methodologies of solving problems and bringing ideas to fruition. My main interests lie in applied machine learning and managing big data to solve real world problems. I enjoy working in the natural language processing domain as well. My course projects have enabled me to gain the required skills to be a well rounded data scientist. I have worked at C-Space as a data science intern where I sparked an interest in the consumer behavioural analytics domain. The problems being worked upon in this area are very challenging and gave me a good exposure to real world data science applications.
                     </p>
 
-                    <p>Apart from aspiring to be a top notch data scientist I enjoy chess, football and music and hope to someday learn how to play a saxophone.</p>
+                    <p>Apart from aspiring to be a top notch data scientist I enjoy playing VR games, football and music and hope to someday learn how to play a saxophone.</p>
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
