--- a/index.html
+++ b/index.html
@@ -88,14 +88,9 @@
     	<div class="container">
     		<div class="row d-flex no-gutters">
 				<h1 class="big">About Me</h1>	
-                    <p>I am a grad student, studying Data Science at the University of Pennsylvania. 
-						I am a data junkie who is skilled in solving analytical problems using quantitative approaches and developing Machine Learning Models. 
-						I am a self-starter, who likes to explore and learn newer methodologies of solving problems and bringing ideas to fruition. 
-						My main interests lie in applied machine learning and managing big data to solve real world problems. 
-						I enjoy working in the natural language processing domain as well. My course projects have enabled me to gain the required skills to be a well rounded data scientist. 
-						I have worked at C-Space as a data science intern where I sparked an interest in the consumer behavioural analytics domain. 
-						The problems being worked upon in this area are very challenging and gave me a good exposure to real world data science applications. 
-						Apart from aspiring to be a top notch data scientist I enjoy playing VR games, watching football and hope to someday learn to play a saxophone.
+                    <p>I am a data junkie who is skilled in solving analytical problems using quantitative approaches and developing machine learning models. 
+						I am a self-starter, who likes to explore and learn newer methodologies of solving problems bringing ideas to fruition. 
+						My main interests lie in applied machine learning and managing big data to solve real world problems.
 					</p>
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
